Add all relevant files

--- a/introduction_to_julia.ipynb
+++ b/introduction_to_julia.ipynb
@@ -17,10 +17,7 @@
     "\n",
     "### Michael Schlottke-Lakemper, Hendrik Ranocha \n",
     "\n",
-    "\n",
-    "- Follow along at https://git.io/JcDM1\n",
-    "- Launch MyBinder at https://tinyurl.com/5spztds3\n",
-    "<!--   (https://mybinder.org/v2/gh/trixi-framework/tutorial-2021-icosahom/HEAD?filepath=introduction_to_julia.ipynb) -->"
+    "Follow along at https://github.com/trixi-framework/tutorial-2023-snubic"
    ]
   },
   {
@@ -38,13 +35,13 @@
     "\n",
     "## Further information on running this notebook\n",
     "\n",
-    "This introduction is available as a Jupyter notebook at https://github.com/trixi-framework/tutorial-2021-icosahom, including information how to set up everything. For more information about Trixi and how to use it, please visit [Trixi on GitHub](https://github.com/trixi-framework/Trixi.jl) or refer to the [official documentation](https://trixi-framework.github.io/Trixi.jl/stable/).\n",
+    "This introduction is available as a Jupyter notebook at https://github.com/trixi-framework/tutorial-2023-snubic, including information how to set up everything. For more information about Trixi and how to use it, please visit [Trixi on GitHub](https://github.com/trixi-framework/Trixi.jl) or refer to the [official documentation](https://trixi-framework.github.io/Trixi.jl/stable/).\n",
     "\n",
-    "This notebook was set up and tested with Julia v1.6.1 but may also work with other (newer) versions.\n",
+    "This notebook was set up and tested with Julia v1.8.3 but may also work with other (newer) versions.\n",
     "\n",
     "*Note:* If you change a variable in a later cell and then re-execute an earlier cell, the results might change unexpectedly. Thus if in doubt, re-run the entire notebook *in order*. The reason is that all cells in a Jupyter notebooks share a common variable space.\n",
     "\n",
-    "*Note:* This notebook is tested using Chromium. Most parts should also work for other browsers such as Firefox, but the videos used in the last demonstrations might not be displayed correctly.\n",
+    "*Note:* This notebook is tested using Firefox. Most parts should also work for other browsers such as Chrome, but the videos used in the last demonstrations might not be displayed correctly.\n",
     "\n",
     "\n",
     "## Authors and license\n",
@@ -115,9 +112,7 @@
     "## Julia at a glance\n",
     "\n",
     "- First public release in 2012, version 1.0 released in 2018\n",
-    "- Free\n",
-    "  - Julia itself is MIT licensed\n",
-    "  - It bundles some GPLed libraries (which can be disabled if desired)\n",
+    "- Free and open source (Julia itself is MIT licensed)\n",
     "- Built-in JIT compiler transforms Julia code to native assembly at run time\n",
     "  - Uses LLVM under the hood\n",
     "- Garbage collected\n",
@@ -189,7 +184,7 @@
     }
    },
    "source": [
-    "### Unicode"
+    "### Unicode and LaTeX"
    ]
   },
   {
@@ -356,6 +351,19 @@
    },
    "outputs": [],
    "source": [
+    "typeof(typeof)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "typeof([1, 2, 3])"
    ]
   },
@@ -400,7 +408,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sizeof(Person) == sizeof(Ptr{String})"
+    "struct Point\n",
+    "    x::Float64\n",
+    "    y::Float64\n",
+    "end\n",
+    "\n",
+    "p = Point(1.0, 2.0)\n",
+    "\n",
+    "sizeof(p)"
    ]
   },
   {
@@ -460,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greet(π, \"ICOSAHOM participants around the world\")"
+    "greet(π, \"Scientists around the world\")"
    ]
   },
   {
@@ -944,13 +959,29 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is similar to using the built-in function `sum`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@benchmark sum($data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "If we tell the compiler not to inline our fucntions, the performance will be reduced significantly, of course."
+    "If we tell the compiler not to inline our functions, the performance will be reduced significantly, of course."
    ]
   },
   {
