Final update to notebooks

--- a/introduction_to_julia.ipynb
+++ b/introduction_to_julia.ipynb
@@ -399,7 +399,7 @@
     }
    },
    "source": [
-    "User-defined types are as efficient as anything built-in"
+    "User-defined types are as efficient as anything built-in:"
    ]
   },
   {
@@ -420,13 +420,287 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple dispatch (short version)\n",
+    "\n",
+    "Julia implements the paradigm of \"dynamic multiple dispatch\" (or, abbreviated, just \"multiple dispatch\"). Multiple dispatch is similar to what is known from other programming languages as *function overloading*: You can have multiple functions with the same name, as long as they differ in their call signature, i.e., if they have different argument types and/or a different number of arguments. In contrast to compiled languages such as C/C++ or Fortran, this works not just with types known statically to the compiler, but also with data where the concrete type is only known at *runtime*.\n",
+    "\n",
+    "For a more in-depth introduction to multiple dispatch, see [Stefan Karpinski's talk at JuliaCon (2019)](https://www.youtube.com/watch?v=kc9HwsxE1OY).\n",
+    "\n",
+    "We start by creating a generic version of a function to calculate the volume integral in a numerical simulation, called `calc_volume_integral!`. The `!` is just a regular character here and is a best practice convention in Julia to denote a function that mutates at least one of its inputs. Since we do not care about computing anything here, we just have it print a short message:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_volume_integral!(du, u, mesh, equations) = println(\"general version\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a next step, we create one data type for the mesh and two data types for the `equations` argument, and create an instance for each:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct StructuredMesh end\n",
+    "struct CompressibleEulerEqn end\n",
+    "struct NavierStokesEqn end\n",
+    "\n",
+    "mesh = StructuredMesh()\n",
+    "euler_eqn = CompressibleEulerEqn()\n",
+    "nse_eqn = NavierStokesEqn()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can start dispatching! We create two additional **methods** for our function, one for each of our new equation types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_volume_integral!(du, u, mesh, equations::CompressibleEulerEqn) = println(\"Compressible Euler version\")\n",
+    "calc_volume_integral!(du, u, mesh, equations::NavierStokesEqn) = println(\"Navier-Stokes version\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now have a look at what is happening when calling `calc_volume_integral!` with different arguments. For this, we create some dummy argumemnts for `du` and `u`, and then call `calc_volume_integral!` with the variable of type `CompressibleEulerEquations`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "du = rand(5); u = rand(5)\n",
+    "\n",
+    "calc_volume_integral!(du, u, mesh, euler_eqn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, the compressible Euler specialization was used. Similarly, if we call the function with the Navier-Stokes variable, we get:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_volume_integral!(du, u, mesh, nse_eqn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, if we use an argument of a type for which no special function is available, we get a call to the original, generic version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct AdvectionEquation end\n",
+    "advection_eqn = AdvectionEquation()\n",
+    "\n",
+    "calc_volume_integral!(du, u, mesh, advection_eqn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This was dispatch on a single input. We now create a new mesh type for adaptive meshes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct AdaptiveMesh end\n",
+    "adaptive = AdaptiveMesh()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we implement a corresponding specialization that dispatches on *both* the mesh and the equations type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_volume_integral!(du, u, mesh::AdaptiveMesh, equations::NavierStokesEqn) = println(\"Navier-Stokes for adpative meshes version\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, we still get the general NSE version if we use our structured mesh variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_volume_integral!(du, u, mesh, nse_eqn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, when we use our new, adaptive mesh type as input, we get the specialized version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc_volume_integral!(du, u, adaptive, nse_eqn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All of this could theoretically have been achieved using static multiple dispatch a.k.a. as function overloading. However, what does it mean that Julia supports dynamic multiple dispatch? In essence, it means that this concept of using the most \"fitting\" method will still work, even if the compiler is **fundamentally unable** to determine the types of the input arguments ahead of time.\n",
+    "\n",
+    "To illustrate this, we will have a look at the following function. It sets up a dummy numerical simulation and then decides *randomly* whether to create a structured mesh or an adaptive mesh (whether this is good coding practice, we will leave up to the audience to decide...):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function run_simulation()\n",
+    "    du = rand(5)\n",
+    "    du = rand(5)\n",
+    "    \n",
+    "    equations = NavierStokesEqn()\n",
+    "    \n",
+    "    if rand(Bool)\n",
+    "        mesh = AdaptiveMesh()\n",
+    "    else\n",
+    "        mesh = StructuredMesh()\n",
+    "    end\n",
+    "    \n",
+    "    calc_volume_integral!(du, u, mesh, equations)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we now run the simulation multiple times, we can see that depending on the *type* of the randomly generated mesh, the correct version of `calc_volume_integral!` is called, even though it is impossible for the compiler to know the types beforehand:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in 1:10\n",
+    "    run_simulation()\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, what do you get out of this? First, it allows one to forget about the distinction between runtime types and compile-time types during code development: You can be sure, that Julia will always dispatch on the actual type and do The Right Thing™.\n",
+    "\n",
+    "In addition, however, multiple dynamic dispatch is one important component of what enables the easy interoperability between packages. The Julia package ecosystem if built around types, and if you write your package code in a generic way, others can easily extend it for their own types.\n",
+    "\n",
+    "For example, we can extend the method `Base.abs`, which returns the absolute value of its argument, to work with our newly created type `Point` from the previous section:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.abs(p::Point) = Point(abs(p.x), abs(p.y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This implementation will do the (somewhat) sane thing here and call `abs` on each of the `Point`'s fields. We can now see this in action by creating a point with negative entries and then feeding it through `abs`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Point(-2.0, 5.0)\n",
+    "\n",
+    "abs(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this is not operator overloading, and that due to just-in-time compilation, the performance of this example code is just as good as for built-in Julia types."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "### Multiple dispatch\n",
+    "### Multiple dispatch (extended version)\n",
     "\n",
     "Julia does not use classes to organize nouns (types) and verbs (functions). Instead, multiple dispatch is a central design decision. Thus, the compiler chooses an appropriate method of a given function based on the types of all arguments (not their values!).\n",
     "\n",
@@ -733,7 +1007,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "## Modules\n",
@@ -785,7 +1060,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "## Using packages\n",
@@ -879,7 +1155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run(`head Manifest.toml`)"
+    "run(`head -n 20 Manifest.toml`)"
    ]
   },
   {
@@ -887,7 +1163,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "# Bonus features of Julia"
