--- a/introduction_to_trixi.ipynb
+++ b/introduction_to_trixi.ipynb
@@ -824,7 +824,7 @@
     }
    },
    "source": [
-    "Similarly, to analyse the spectrum of non-linear operators we can use `jacobian_ad_forward`, which uses sforward mode automatic differentiation to compute the Jacobian `J` of the operator. Here we use the elixir [examples/elixir_euler_simple.jl](examples/elixir_euler_simple.jl), which is a simplified version of an elixir for the compressible Euler equations that also comes packaged with Trixi:"
+    "Similarly, to analyse the spectrum of non-linear operators we can use `jacobian_ad_forward`, which uses forward mode automatic differentiation to compute the Jacobian `J` of the operator. Here we use the elixir [examples/elixir_euler_simple.jl](examples/elixir_euler_simple.jl), which is a simplified version of an elixir for the compressible Euler equations that also comes packaged with Trixi:"
    ]
   },
   {
