--- a/introduction_to_julia.ipynb
+++ b/introduction_to_julia.ipynb
@@ -663,6 +663,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# struct Point\n",
+    "#     x::Float64\n",
+    "#     y::Float64\n",
+    "# end\n",
     "Base.abs(p::Point) = Point(abs(p.x), abs(p.y))"
    ]
   },
