--- a/introduction_to_trixi.ipynb
+++ b/introduction_to_trixi.ipynb
@@ -231,7 +231,7 @@
     }
    },
    "source": [
-    "## Supersonic flow over a cylinder with curvilinear cellsa and daptive mesh refinement"
+    "## Supersonic flow over a cylinder with curvilinear cells and adaptive mesh refinement"
    ]
   },
   {
